# edge_sparsification

./: LICENSE  README.md
code/: CMakeLists.txt  build.sh  fix_plot_path.py  gurobi_install.sh  image_instance.py  remove_unsolved.py  run_solver.py  run_sparsification.py  script.sh  script_instances.sh  script_sparsification.sh  script_sparsification_area.sh  script_sparsification_images.sh  script_sparsification_tsplib.sh
code/cmake/: FindCPLEX.cmake  FindGUROBI.cmake  FindTBB.cmake  util.cmake
code/definitions/include/definitions/: global_definitions.h
code/edge_sparsification/: CMakeLists.txt  main.cpp  merge_main.cpp
code/edge_sparsification/include/edge_sparsification/: EdgeSparsification.h  sparsification.h
code/edge_sparsification/include/gabriel/: GabrielGraph.h
code/edge_sparsification/include/greedy_spanner/: GreedySpanner.h
code/edge_sparsification/include/greedy_triangulation/: GreedyTriangulation.h
code/edge_sparsification/include/onion_hull/: OnionHull.h
code/edge_sparsification/include/rng/: RelativeNeighborhoodGraph.h
code/edge_sparsification/include/wspd/: Splittree.h  SplittreeNode.h  WSPD.h
code/edge_sparsification/src/edge_sparsification/: EdgeSparsification.cpp  sparsification.cpp
code/edge_sparsification/src/gabriel/: GabrielGraph.cpp
code/edge_sparsification/src/greedy_spanner/: GreedySpanner.cpp
code/edge_sparsification/src/greedy_triangulation/: GreedyTriangulation.cpp
code/edge_sparsification/src/onion_hull/: OnionHull.cpp
code/edge_sparsification/src/rng/: RelativeNeighborhoodGraph.cpp
code/edge_sparsification/src/wspd/: Splittree.cpp  SplittreeNode.cpp  WSPD.cpp
code/genetic/: CMakeLists.txt  fitness.h  genetic.cpp
code/instance_generator/: CMakeLists.txt  main.cpp
code/instance_generator/include/instance_generator/: instance_random.h
code/instance_generator/src/instance_generator/: instance_random.cpp
code/mwt/: CMakeLists.txt
code/mwt/cmake/: MWTConfig.cmake
code/mwt/include/cppitertools/: accumulate.hpp  chain.hpp  chunked.hpp  combinations_with_replacement.hpp  compress.hpp  cycle.hpp  dropwhile.hpp  enumerate.hpp  filter.hpp  filterfalse.hpp  groupby.hpp  permutations.hpp  powerset.hpp  product.hpp  reversed.hpp  slice.hpp  sliding_window.hpp  sorted.hpp  starmap.hpp  takewhile.hpp  unique_everseen.hpp  zip.hpp  zip_longest.hpp
code/mwt/include/cppitertools/examples/: CMakeLists.txt
code/mwt/include/cppitertools/test/: CMakeLists.txt
code/mwt/include/simplesvg/: simple_svg_1.0.0.hpp
code/mwt/mwt/include/mwt/CGAL/: Circular_interval_set.h  Directional_filter.h  Filtered_incremental_search.h  Interval_set.h  Lmt_halfedge.h  Minimum_weight_triangulation.h  Minimum_weight_triangulation_algorithms.h  Mwt_stats.h  Mwt_traits.h  Static_quad_tree.h
code/mwt/mwt/include/mwt/CPLEX/: basic_mwt_solver.hpp  empty_triangle.hpp
code/mwt/mwt/include/mwt/utils/: common_utils.h  instance_utils.hpp  ip_solver_utils.h  mwt_utils.hpp  mwt_visualiztion_utils.h  progress_bar.h  pythonic_utils.hpp  random_utils.hpp  vector_utils.hpp
code/mwt/mwt_library/: CMakeLists.txt
code/mwt/mwt_library/include/mwt_library/: mwt_library.h
code/mwt/mwt_library/src/mwt_library/: mwt_library.cpp
code/solver/: CMakeLists.txt  main.cpp
code/solver/include/alpha_mst/: Alpha_mst.h  Alpha_mst_solution.h
code/solver/include/angle_tsp/: Angle_tsp.h  Angle_tsp_solution.h
code/solver/include/degree_mst/: Degree_mst.h  Degree_mst_solution.h
code/solver/include/mpp/: Min_perimeter_polygon.h  Min_perimeter_polygon_solution.h
code/solver/include/solver/: Instance.h  Solution.h
code/solver/src/alpha_mst/: Alpha_mst.cpp  Alpha_mst_solution.cpp
code/solver/src/angle_tsp/: Angle_tsp.cpp  Angle_tsp_solution.cpp
code/solver/src/degree_mst/: Degree_mst.cpp  Degree_mst_solution.cpp
code/solver/src/mpp/: Min_perimeter_polygon.cpp  Min_perimeter_polygon_solution.cpp
code/solver/src/solver/: Instance.cpp
code/utils/: CMakeLists.txt
code/utils/include/utils/: fileutils.hpp  gnuplot_output_2.h  json_utils.hpp
evaluation/01_sparsification/: 01_evaluate_num_edges.ipynb
evaluation/02_angular_tsp/: 01_evaluate.ipynb
evaluation/03_angdist_tsp/: 01_evaluate.ipynb
evaluation/04_mpp/: 01_evaluate.ipynb
evaluation/05_minarea/: 01_evaluate.ipynb
evaluation/06_maxarea/: 01_evaluate.ipynb
evaluation/07_instance_distribution/: 00_evaluate.ipynb
